[gd_scene load_steps=5 format=2]

[ext_resource path="res://run_src/CharactersPrompts.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="CharactersPrompts" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 547.0
margin_right = -4.0
margin_bottom = 4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogLineTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="DialogueText" type="Label" parent="."]
margin_left = 79.0
margin_top = 44.0
margin_right = 1079.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameText" type="Label" parent="."]
margin_left = 30.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="DialogLineTimer" to="." method="_on_DialogLineTimer_timeout"]
